--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
 
     "require": {
-       "php": "^8.1",
+       "php": "^7.4|^8.0|^8.1",
        "doctrine/dbal": "^2.6|^3.1",
         "laravel/framework": "~5|~6|~7|~8|~9|~10",
         "pragmarx/support": "~0.6|~0.7|~0.8|~0.9",
