--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
         "pragmarx/datatables": "^1.4.12",
         "snowplow/referer-parser": "~0.1",
         "jaybizzle/crawler-detect": "~1.0",
-        "psr/log": "~1.0|~3.0",
-        "monolog/monolog": "^3.0|^3.6"
+        "psr/log": "~1.0|~3.0"
     },
 
     "suggest": {
