--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "pragmarx/datatables": "^1.4.12",
         "snowplow/referer-parser": "~0.1",
         "jaybizzle/crawler-detect": "~1.0",
-        "psr/log": "~1.0|~3.0"
+        "psr/log": "~1.0|~3.0",
+        "monolog/monolog": "^2.5|^3.0"
     },
 
     "suggest": {
